<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:background="@color/colorPrimary">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:src="@drawable/clouds_fog_forest"
            android:id="@+id/imageView3" android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:tint="#43000000"
    />

    <ProgressBar
            android:id="@+id/register_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:visibility="invisible" android:layout_centerHorizontal="true"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:src="@drawable/ic_launcher" android:id="@+id/mindfulLogo"
                       android:layout_marginTop="32dp"
                       app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                       android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                       android:layout_marginStart="8dp" android:scaleType="centerCrop" android:adjustViewBounds="true"
            />
            <TextView
                    android:text="@string/welcome_screen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:textSize="30sp" android:textAlignment="center"
                    android:textAllCaps="true" android:layout_margin="20dp" android:id="@+id/loginTitel"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mindfulLogo"
                    app:layout_constraintHorizontal_bias="1.0" android:textColor="@color/white"/>

            <TextView
                    android:text="REGISTREREN"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/textView2"
                    android:textColor="@color/white"
                    android:textAlignment="center" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/loginTitel"/>

            <EditText android:id="@+id/register_email"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:hint="@string/prompt_email"
                      android:inputType="textEmailAddress"
                      android:maxLines="1"
                      android:singleLine="true"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp" android:padding="18dp"
                      app:backgroundTint="@color/white"
                      android:textColor="@color/white"
                      android:textColorHint="#f5f5f5" android:layout_marginStart="32dp"
                      android:layout_marginEnd="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>

            <EditText android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:hint="Voornaam"
                      app:backgroundTint="@color/white"
                      android:textColor="@color/white"
                      android:textColorHint="#f5f5f5"
                      android:maxLines="1"
                      android:padding="18dp"
                      android:inputType="textPersonName"
                      android:id="@+id/register_firstname" android:layout_marginEnd="32dp"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/register_email"/>
            <EditText android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:hint="Achternaam"
                      app:backgroundTint="@color/white"
                      android:textColor="@color/white"
                      android:padding="18dp"
                      android:textColorHint="#f5f5f5"
                      android:maxLines="1"
                      android:inputType="textPersonName"
                      android:id="@+id/register_lastname" android:layout_marginEnd="32dp"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/register_firstname"/>
            <EditText
                    android:id="@+id/edit_register_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="18dp"
                    app:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHint="#f5f5f5" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/register_lastname"/>

            <EditText
                    android:id="@+id/edit_register_repeat_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_repeat_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_register_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:padding="18dp"
                    app:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHint="#f5f5f5" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>

            <Button
                    android:id="@+id/btn_register"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_register"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp" android:padding="18dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_register_repeat_password" android:layout_marginStart="32dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnBackToLogin"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
            <Button
                    android:text="IK HEB AL EEN ACCOUNT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="toLogin"
                    android:id="@+id/btnBackToLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    app:layout_constraintBottom_toTopOf="@+id/info_linearlayout" android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp" android:layout_marginBottom="32dp"/>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_linearlayout"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="16dp">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_pieterlogo"
                        android:id="@+id/imageView2" android:contentDescription="TODO"/>
                <TextView
                        android:text="Pieter-Jan De Schryver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textAlignment="center"
                        android:textColor="@color/white"/>
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>