...
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:visibility="gone" android:layout_centerHorizontal="true"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <android.support.constraint.ConstraintLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:src="@drawable/ic_launcher" android:id="@+id/mindfulLogo"
...
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_password" android:padding="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp" app:layout_constraintBottom_toTopOf="@+id/login_form_register_btn"
                    android:layout_marginBottom="8dp"/>

            <Button
                    android:text="Wachtwoord vergeten?"
                    android:onClick="toForgot"
                    android:layout_width="0dp"
...
