...
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Dit veld is verplicht</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_login_form_register">Registreer</string>
    <string name="action_register">Registreer</string>
    <string name="logout">Uitloggen</string>
    <!-- Strings related to register -->
    <string name="prompt_groupcode">Groepscode</string>
    <string name="prompt_repeat_password">Herhaal wachtwoord</string>
    <string name="action_register_short">Registreer</string>
...
